Added background overlay

--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,12 @@ body {
 #hero {
     height: 100vh;
     width: 100vw;
-    background-image: url("resources/hero-image.jpg");
+    background:
+        linear-gradient(
+            rgba(0, 0, 0, 0.45), 
+            rgba(0, 0, 0, 0.45)
+        ),
+        url("resources/hero-image.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
