--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600&display=swap');
 
 @font-face {
     font-family: 'aileronsregular';
@@ -48,17 +48,23 @@ body {
 }
 
 #header {
+    height: calc(100vh - 4em);
     display: grid;
-    grid-template-columns: 100fr;
-    grid-auto-rows: 100fr;
-    justify-items: center;
-    align-items: center;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 1fr 4em 8em;
+    grid-template-areas:
+    "name"
+    "h1"
+    "social";
 }
 
 #rectangle {
     height: 20em;
     width: 20em;
     border: 3px solid #fff;
+    grid-area: name;
+    justify-self: center;
+    align-self: end;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -70,5 +76,16 @@ body {
     color: #fff;
     font-size: 8em;
     margin: 0;
+}
+
+#h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    font-size: 1em;
+    text-transform: uppercase;
+    color: #fff;
+    grid-area: h1;
+    justify-self: center;
+    align-self: center;
 }
 
