--- a/styles.css
+++ b/styles.css
@@ -104,3 +104,16 @@ a {
     width: 1.7em;
     padding: 0 2px;
 }
+
+#projects {
+    height: 100vh;
+    width: 100vw;
+    background-color: #C9C9C9;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 4em 8em;
+    grid-template-areas:
+    "display description"
+    "buttons made-using"
+    "buttons technologies";
+}
