--- a/styles.css
+++ b/styles.css
@@ -106,9 +106,10 @@ a {
 }
 
 .projects {
-    height: 100vh;
+    height: 600px;
     width: 100vw;
     background-color: #C9C9C9;
+    border-bottom: 2px solid rgba(127, 127, 127, 0.2);
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 4em 8em;
@@ -128,6 +129,7 @@ a {
 }
 
 .buttons {
+    margin: 20px 0 0;
     grid-area: buttons;
     justify-self: center;
     align-self: start;
@@ -163,6 +165,7 @@ a {
     color: #808080;
     font-size: 1em;
     font-family: 'Montserrat', sans-serif;
+    margin: 0 0 0 20px;
     grid-area: description;
     text-align: left;
     justify-self: start;
@@ -189,7 +192,7 @@ a {
     font-size: 1em;
     font-weight: 500;
     font-family: 'Montserrat', sans-serif;
-    margin: 0;
+    margin: 0 0 0 20px;
     grid-area: made-using;
     justify-self: start;
     align-self: center;
@@ -197,6 +200,7 @@ a {
 
 .technology {
     grid-area: technologies;
+    margin: 0 0 0 15px;
 }
 
 .technology-img {
