--- a/styles.css
+++ b/styles.css
@@ -243,6 +243,7 @@ a {
 #certifications {
     height: 600px;
     width: 100vw;
+    padding: 50px 0;
     justify-content: center;
     align-items: center;
     display: grid;
