Added a send button

--- a/styles.css
+++ b/styles.css
@@ -383,7 +383,7 @@ a {
     grid-template-areas:
     "heading heading"
     "icn contact"
-    "button button";
+    "send send";
 }
 
 #heading {
@@ -455,4 +455,19 @@ textarea {
 
 textarea:focus {
     outline: 0;
+}
+
+#send-button {
+    padding: 0;
+    margin: 0 30px;
+    width: 80px;
+    height: 30px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 0.8em;
+    font-weight: 500;
+    background-color: #C9C9C9;
+    border: none;
+    border-radius: 25px;
+    justify-self: end;
+    grid-area: send;
 }
