--- a/styles.css
+++ b/styles.css
@@ -414,6 +414,7 @@ a {
 #contact-details {
     color: #808080;
     font-size: 0.8em;
+    border-left: 1px solid rgba(127, 127, 127, 0.3);
     grid-area: contact;
     display: grid;
     grid-template-columns: 100px 300px;
@@ -459,7 +460,7 @@ textarea:focus {
 
 #send-button {
     padding: 0;
-    margin: 0 30px;
+    margin: 0 50px;
     width: 80px;
     height: 30px;
     font-family: 'Montserrat', sans-serif;
