--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,7 @@ a {
     width: 25em; /* 16:9 ratio */
     border: 1px solid var(--white);
     opacity: 0.8;
+    background-color: var(--dark-grey);
     grid-area: gif;
 }
 
@@ -176,6 +177,7 @@ a {
     line-height: 2.5em;
     cursor: pointer;
 }
+
 .button:focus {
     outline: 0;
 }
@@ -220,11 +222,14 @@ a {
 .project-name {
     font-size: 1.6em;
     margin: 0 0 0.7em;
+    color: var(--dark-grey);
 }
 
 .project-idea {
     font-size: 1em;
     margin: 0 0 0.7em;
+    color: var(--dark-grey);
+    opacity: 0.7;
 }
 
 .project-description {
@@ -233,7 +238,8 @@ a {
 }
 
 .made-using {
-    color: var(--grey);
+    color: var(--dark-grey);
+    opacity: 0.7;
     font-size: 1em;
     font-weight: 500;
     font-family: 'Montserrat', sans-serif;
@@ -511,6 +517,51 @@ textarea:focus {
         height: 2.4em;
         width: 2.4em;
     }
+
+    .display {
+        grid-template-columns: 30em;
+        grid-template-rows: 17em 4em;
+    }
+
+    .gif {
+        height: 17em; /* 16:9 ratio */
+        width: 30em; /* 16:9 ratio */
+    }
+
+    .button {
+        height: 2.8em;
+        width: 14em;
+        font-size: 0.8em;
+    }
+
+    .vertical-line {
+        height: 500px;
+    }
+
+    .description {
+        grid-template-columns: 30em;
+    }
+
+    .project-name {
+        font-size: 1.8em;
+    }
+    
+    .project-idea {
+        font-size: 1.15em;
+    }
+    
+    .project-description {
+        font-size: 1.1em;
+    }
+    
+    .made-using {
+        font-size: 1.15em;
+    }
+    
+    .technology-img {
+        height: 55px;
+        width: 55px;
+    }
 }
 
 @media only screen and (max-width: 1080px) {
@@ -548,4 +599,5 @@ textarea:focus {
         height: 2.4em;
         width: 2.4em;
     }
+
 }
