--- a/styles.css
+++ b/styles.css
@@ -411,7 +411,7 @@ a {
     text-transform: uppercase;
     font-weight: 400;
     font-size: 1.2em;
-    color: var(--grey);
+    color: var(--dark-grey);
     margin: 0;
     align-self: center;
     text-align: center;
@@ -433,7 +433,8 @@ a {
 }
 
 #contact-details {
-    color: var(--grey);
+    color: var(--dark-grey);
+    opacity: 0.9;
     font-size: 0.8em;
     border-left: 1px solid var(--dark-grey);
     opacity: 0.3;
@@ -612,6 +613,38 @@ textarea:focus {
 
     .horizontal-line {
         width: 20em;
+    }
+
+    #contact-form {
+        height: 800px;
+        width: 100vw;
+    }
+
+    #contact {
+        height: 500px;
+        width: 850px;
+        grid-template-columns: 250px 1fr;
+        grid-template-rows: 100px 1fr 100px;
+    }
+
+    #heading {
+        font-size: 1.6em;
+    }
+
+    .icn {
+        height: 50px;
+        width: 50px;
+    }
+
+    #contact-details {
+        font-size: 1.2em;
+        grid-template-columns: 150px 350px;
+        grid-template-rows: 1fr 1fr 1fr 125px;
+    }
+
+    #send-button {
+        width: 100px;
+        font-size: 0.9em;
     }
 }
 
