--- a/styles.css
+++ b/styles.css
@@ -387,7 +387,7 @@ a {
 
 .horizontal-line {
     height: 1px;
-    width: 18em;
+    width: 90%;
     background-color: var(--dark-grey);
     opacity: 0.3;
     justify-self: center;
@@ -623,10 +623,6 @@ textarea:focus {
         font-size: 0.88em;
     }
 
-    .horizontal-line {
-        width: 20em;
-    }
-
     #contact-form {
         height: 800px;
         width: auto;
@@ -656,6 +652,111 @@ textarea:focus {
 
     #send-button {
         width: 100px;
+        font-size: 0.9em;
+    }
+}
+
+@media only screen and (max-width: 1080px) {
+    .project {
+        height: auto;
+        padding: 25px 0;
+        display: grid;
+        grid-column-gap: 0;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto;
+        grid-row-gap: 35px;
+        grid-template-areas:
+        "side-two"
+        "side-one";
+    }
+
+    .description {
+        grid-template-columns: 100vw;
+        grid-template-rows: auto auto auto;
+        justify-items: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    .project-name {
+        font-size: 1.7em;
+        padding: 0 40px;
+    }
+    
+    .project-idea {
+        font-size: 1.1em;
+        padding: 0 40px;
+    }
+    
+    .project-description {
+        font-size: 1.1em;
+        padding: 0 40px;
+    }
+    
+    .made-using {
+        font-size: 1.1em;
+    }
+
+    .display {
+        grid-template-columns: 100vw;
+        grid-template-rows: auto auto;
+        grid-template-areas:
+        "gif"
+        "buttons";
+    }
+
+    .gif {
+        height: 40vw; /* 16:9 ratio */
+        width: 70vw; /* 16:9 ratio */
+        justify-self: center;
+    }
+
+    .button {
+        height: 2.5em;
+        width: 25vw;
+        padding: 0;
+        margin: 0 15px;
+        line-height: 2.5em;
+        font-size: 0.85em;
+    }
+
+    .github-logo {
+        height: 1.8em;
+        width: 1.8em;
+        margin: 0 3px 0 0;
+    }
+
+    .vertical-line {
+        display: none;
+    }
+
+    #certifications {
+        height: auto;
+        padding: 50px 0;
+        width: auto;
+        grid-template-columns: 40vw 40vw;
+        grid-template-rows: repeat(3, auto);
+        grid-column-gap: 20px;
+    }
+
+    .card {
+        min-height: 40vw;
+        height: 100%;
+        width: 100%;
+        grid-template-rows: 90px 3px auto 3px auto;
+    }
+
+    .website-logo {
+        width: 50px;
+        height: 50px;
+    }
+
+    .middle li {
+        font-size: 0.9em;
+        padding: 5px 0;
+    }
+    
+    .bottom li {
         font-size: 0.9em;
     }
 }
